test/files/buildmanager/t2655/t2655.check
builder > A.scala B.scala
compiling Set(A.scala, B.scala)
Changes: Map()
builder > A.scala
compiling Set(A.scala)
Changes: Map(object A -> List(Changed(Definition(A.x))[method x changed from (i: Function0)Unit to (i: Function0)Unit flags: <method>]))
invalidate B.scala because it references changed definition [Changed(Definition(A.x))[method x changed from (i: Function0)Unit to (i: Function0)Unit flags: <method>]]
compiling Set(B.scala)
B.scala:2: error: type mismatch;
<<<<<<< HEAD
 found   : java.lang.String("3")
=======
 found   : String("3")
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 required: () => String
  val x = A.x("3")
              ^
